# Digital-Edu

./: .gitignore  README.md  config.py  download_deps.py  monitor_structure.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py
app/models/: __init__.py  admin.py  badge.py  progress.py  user.py
app/routes/: admin.py  auth.py  courses.py  main.py  progress_api.py
app/services/: assessment_parser.py  course_parser.py  validator.py
app/templates/: base.html  course.html
app/templates/components/: _admin_sidebar.html  assessment.html  practical_workshop.html  tree_item.html  workshop.html
app/templates/pages/: 404.html  admin_badges.html  admin_certificates.html  admin_content.html  admin_dashboard.html  admin_submissions.html  admin_users.html  content_viewer.html  courses.html  index.html  landing.html  login.html  profile.html  register.html  settings.html  user_dashboard.html
courses/algorithm_course/: .courseignore  .gitignore  Curriculum.md  GLOSSARY.md  README.md
courses/algorithm_course/assessments/: README.md  entry-assessment.md  phase-1-assessment.md  phase-2-assessment.md  phase-3-assessment.md  phase-4-assessment.md
courses/algorithm_course/examples/: course-schedule-walkthrough.md  lru-cache-walkthrough.md  merge-intervals-walkthrough.md  (+2 more)
static/css/: style.css
static/js/: main.js
templates/: css_rules.yaml  general_rules.yaml  html_structure.yaml
tests/: test_all.py  test_badges_e2e.py  test_e2e.py  test_e2e_smart.py  test_phase1.py  test_phase2.py  test_phase3_4.py  test_phase3_6.py  test_production_e2e.py  test_validator.py
(+3128 files in other folders)
