[project]
name = "digital-edu"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "Flask==3.1.0",
    "Flask-Login==0.6.3",
    "Flask-Session==0.8.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.0.7",
    "SQLAlchemy==2.0.36",
    "Markdown==3.7",
    "PyYAML==6.0.2",
    "python-dotenv==1.0.1",
]

[tool.vercel]
entrypoint = "run:app"
